# cic-text-interface

./: .gitignore  main.py  pyproject.toml  version.py
api/: dependencies.py  middlewares.py
api/api_v1/: routing.py
api/api_v1/docs/openapi/api/routes/: country.py  language.py  supported_langauges.py
api/api_v1/routes/: __init__.py  country.py  language.py  supported_languages.py
config/: celery.ini  database.ini  security.ini
daemons/: tasker.py
dev/scripts/: migrations.py
regions/generic/: request_handler.py
src/: cache.py  condiments.py  config.py
src/crud/: __init__.py  base.py  crud_country.py  crud_country_language.py  crud_language.py
src/database/: __init__.py  base.py  base_class.py  session.py
src/database/migrations/default/: env.py
src/database/migrations/default/versions/: 32a20178e694_.py
src/models/: __init__.py  country.py  country_langauge_association.py  language.py
src/schemas/: __init__.py  country.py  country_language.py  language.py  utils.py
src/syncers/: language.py
src/worker/: celery_config.py  celery_utils.py
tasks/: __init__.py  language.py
